ADD `PUT /payments/{id}/auth`
